# CASPI

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE.md  README.md  README.txt  TODO.md  caspi.h  library.h
.github/scripts/: check_benchmark_regression.py
.github/workflows/: Benchmarks.yml  asan.yaml  ci.yaml  docs.yml  linux.yml  macos.yml  rtsan.yml  run_all_tests.yaml  sanitizers.yml  tsan.yaml  valgrind.yaml  windows.yml
Benchmarks/: CMakeLists.txt
Benchmarks/Producers/: Oscillator_bm.cpp
Benchmarks/base/: AudioBuffer_SIMD_bm.cpp  Buffer_bm.cpp  Denormals_bm.cpp  Expected_bm.cpp  Phase_bm.cpp  PolyKernel_bm.cpp  SIMD_bm.cpp
CASPI/: caspi.h
CASPI/base/: caspi_Assert.h  caspi_Backtrace.h  caspi_Compatibility.h  caspi_Constants.h  caspi_Denormals.h  caspi_Features.h  caspi_Macros.h  caspi_Platform.h  caspi_RealtimeContext.h  caspi_SIMD.h  caspi_Template.h.in  caspi_Traits.h
CASPI/base/SIMD/: caspi_AVX.h  caspi_Blocks.h  caspi_Complex.h  caspi_Intrinsics.h  caspi_LoadStore.h  caspi_Operations.h  caspi_Strategy.h
CASPI/controls/: caspi_Envelope.h  caspi_ModMatrix.h
CASPI/core/: caspi_AudioBuffer.h  caspi_Base.h  caspi_CircularBuffer.h  caspi_CircularBuffers.h  caspi_Core.h  caspi_Expected.h  caspi_Graph.h  caspi_Node.h  caspi_Parameter.h  caspi_Phase.h  caspi_Processor.h  caspi_Producer.h  caspi_Span.h
CASPI/envelopes/: caspi_Envelope.h
CASPI/filters/: caspi_Filter.h  caspi_OnePoleFilter.h  caspi_SvfFilter.h
CASPI/gain/: caspi_Gain.h  caspi_Waveshaper.h
CASPI/maths/: caspi_FFT.h  caspi_FFT_new.h  caspi_Maths.h
CASPI/midi/: caspi_Midi.h
CASPI/oscillators/: caspi_BlepOscillator.h  caspi_LFO.h  caspi_Noise.h  caspi_Operator.h  caspi_PMOperator.h  caspi_WavetableOscillator.h
CASPI/synthesizers/: caspi_Engine.h  caspi_FMGraph.h  caspi_PMAlgorithm.h  caspi_Voice.h
Docs/: header.html  mainpage.md
Docs/bench/: benchmark.html
Docs/bench/results/: index.json  results-2026-03-23-main.json  results-2026-03-30-main.json  results-2026-04-06-main.json  results-2026-04-13-main.json  results-2026-04-20-main.json  results-2026-04-27-main.json  results-2026-05-04-main.json  results-2026-05-11-main.json  results-2026-05-18-main.json  results-2026-05-25-main.json  results-2026-06-01-main.json  results-2026-06-08-main.json  results-2026-06-15-main.json  (+2 more)
Docs/pages/: benchmarks.dox  examples.dox  mainpage.dox
Source/: CMakeLists.txt  caspi.h
Source/AudioUtilities/: caspi_FFT.h  caspi_Gain.h
Source/Envelopes/: caspi_ADSR.h  caspi_Envelope.h  caspi_EnvelopeGenerator.h  caspi_envelopes.h
Source/Filters/: caspi_OnePoleFilter.h  caspi_SvfFilter.h  caspi_filters.h
Source/Gain/: caspi_Waveshaper.h
Source/Oscillators/: caspi_BlepOscillator.h  caspi_Oscillator.h  caspi_Oscillators.h  caspi_PMOperator.h  caspi_PMOperator_new.h  caspi_oscillators.h
Source/Oscillators/BLEP/: caspi_BlepOscillator.h
Source/Oscillators/Wavetable/: caspi_WavetableOscillator.cpp  caspi_WavetableOscillator.h
Source/Synthesizers/: caspi_PMAlgorithm.h  caspi_SynthVoice.h
Source/Utilities/: caspi_Assert.h  caspi_CircularBuffer.h  caspi_Constants.h  caspi_FFT.h  caspi_FFT_new.h  caspi_Gain.h  caspi_LeakDetector.h  caspi_Maths.h  caspi_ScopedLock.h  caspi_assert.h  caspi_utilities.h
Source/core/: caspi_Base.h  caspi_CircularBuffer.h  caspi_Features.h  caspi_Platform.h
Source/envelopes/: caspi_Envelope.h
Source/filters/: caspi_OnePoleFilter.h
Source/gain/: caspi_Gain.h
Source/maths/: caspi_FFT_new.h
Source/oscillators/: caspi_BlepOscillator.h  caspi_PMOperator.h
Source/synthesizers/: caspi_PMAlgorithm.h
Tests/: CMakeLists.txt  CircularBuffer_test.cpp  Envelope_test.cpp  FFT_test.cpp  Filter_test.cpp  Gain_test.cpp  Maths_test.cpp  Oscillator_test.cpp  PMAlgorithm_test.cpp  PMOperator_test.cpp  Synthesizer_test.cpp  Utilities_test.cpp  Utilities_test.h  test_helpers.h
Tests/AudioProcessors/: Envelope_test.cpp  Waveshaper_test.cpp
Tests/AudioSources/: Oscillator_test.cpp  PMOperator_test.cpp
Tests/AudioUtilities/: CircularBuffer_test.cpp  FFT_test.cpp
Tests/Python/: README.md  gen_plots.sh  plotSignal.py
Tests/SynthesizerModules/: PMAlgorithm_test.cpp
Tests/Utilities/: Maths_test.cpp  Utilities_test.cpp
Tests/analysis/: caspi_FMTheory.h  caspi_SpectralProfile.h
Tests/base/: AudioBuffer_test.cpp  BaseClass_test.cpp  CircularBuffer_test.cpp  DelayLine_test.cpp  Expected_test.cpp  Parameter_test.cpp  Phase_test.cpp  SIMD_test.cpp  Span_test.cpp  Utilities_test.cpp
Tests/base/SIMD/: SIMD_AVX_test.cpp  SIMD_LoadStore_test.cpp  SIMD_PolyKernel_test.cpp  SIMD_block_test.cpp  SIMD_complex_test.cpp  SIMD_operations_test.cpp  SIMD_strategy_test.cpp  SIMD_test_helpers.h
Tests/controls/: Envelope_test.cpp  ModMatrix_test.cpp
Tests/core/: AudioBuffer_test.cpp  DelayLine_test.cpp  Expected_test.cpp  Graph_test.cpp  Parameter_test.cpp  Processor_test.cpp  Producer_test.cpp
Tests/filters/: Filter_test.cpp  SvfFilter_test.cpp
Tests/maths/: FFT_test.cpp  FMTheory_test.cpp  Maths_test.cpp  Spectral_test.cpp
Tests/midi/: Midi_test.cpp
Tests/processors/: Envelope_test.cpp  Filter_test.cpp  Gain_test.cpp  Waveshaper_test.cpp
Tests/sources/: BlepOscillator_test.cpp  LFO_test.cpp  Noise_test.cpp  Operator_test.cpp  Oscillator_test.cpp  WavetableOscillator_test.cpp
Tests/synthesizers/: Engine_test.cpp  FMGraph_test.cpp  PMAlgorithm_test.cpp  Voice_test.cpp
Tools/CASPy/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
Tools/CASPy/Examples/: ADSR.ipynb  FMGraph.ipynb  Graph.ipynb  Integration.ipynb  LFO.ipynb  ModMatrix.ipynb  Noise.ipynb  Operator.ipynb  Oscillators.ipynb  Parameters.ipynb  Wavetable.ipynb
Tools/CASPy/Source/: caspy_module.cpp
Tools/CASPy/Source/Bindings/: bind_LFO.cpp  bind_adsr.cpp  bind_core.cpp  bind_engine.cpp  bind_filters.cpp  bind_fmgraph.cpp  bind_graph.cpp  bind_modmatrix.cpp  bind_noise.cpp  bind_operator.cpp  bind_oscillators.cpp  bind_parameters.cpp  bind_pm.cpp  bind_wavetable.cpp
Tools/CASPy/Tests/: test_bindings.py
Tools/TestSynth/: CMakeLists.txt
