[build-system]
requires = ["scikit-build-core>=0.9.0", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "caspy"
version = "0.1.0"
description = "Python bindings for CASPI audio DSP library"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
    "matplotlib>=3.5.0",
    "ipykernel>=6.0.0",
    "pytest>=7.0.0",
    "scipy>=1.7.0",
]
audio = [
    "sounddevice>=0.4.0",
]

[tool.scikit-build]
# Build artifacts stay out-of-source
build-dir = "build/{wheel_tag}"
# CMake config
cmake.minimum-version = "3.15"
cmake.build-type = "Release"
# Verbose for debugging (remove later)
cmake.verbose = false

[tool.scikit-build.cmake.define]
SKBUILD_PROJECT_NAME = "caspy"